force-app/main/default/objects/Order/fields/All_Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>All_Serial_Numbers__c</fullName>
    <label>All Serial Numbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>