force-app/main/default/objects/Order/fields/netsuite_conn__Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Discount_Total__c</fullName>
    <label>Header Discount Total (NetSuite)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>