force-app/main/default/objects/Order/fields/Netsuite_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Id__c</fullName>
    <description>added for gtms-11890</description>
    <externalId>true</externalId>
    <label>Netsuite Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>