force-app/main/default/objects/Order/fields/Push_to_Mulesoft__c.field-meta.xml
<CustomField>
    <fullName>Push_to_Mulesoft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for gtms-11890</description>
    <label>Push to Mulesoft</label>
    <type>Checkbox</type>
</CustomField>