force-app/main/default/objects/Order/fields/Push_To_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Push_To_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for gtms-11890</description>
    <label>Push To NetSuite</label>
    <type>Checkbox</type>
</CustomField>