force-app/main/default/objects/Order/fields/Return_Number_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Return_Number_Shipping__c</fullName>
    <description>added for GTMS-11890</description>
    <label>Return Number Shipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>