force-app/main/default/objects/Order/fields/Shipping_Address_NEW__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_NEW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>Shipping_Address__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>