force-app/main/default/objects/Order/fields/Sync_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Sync_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for gtms-11890</description>
    <label>Sync in Progress</label>
    <type>Checkbox</type>
</CustomField>