force-app/main/default/objects/Order/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>added for GTMS-11890</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual Return</fullName>
            </value>
            <value>
                <fullName>Remorse Return</fullName>
            </value>
            <value>
                <fullName>Free Trial Return</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Free Trial Opportunity</fullName>
            </value>
            <value>
                <fullName>Revenue Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>