force-app/main/default/objects/Order/recordTypes/Free_Trial_Order.recordType-meta.xml
<RecordType>
    <fullName>Free_Trial_Order</fullName>
    <active>true</active>
    <label>Free Trial Order</label>
</RecordType>