force-app/main/default/objects/Order/recordTypes/Return_Order.recordType-meta.xml
<RecordType>
    <fullName>Return_Order</fullName>
    <active>true</active>
    <label>Return Order</label>
</RecordType>