force-app/main/default/objects/Order/recordTypes/Standard_Order.recordType-meta.xml
<RecordType>
    <fullName>Standard_Order</fullName>
    <active>true</active>
    <label>Standard Order</label>
</RecordType>