force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Netsuite_Id__c</columns>
    <columns>Order_Record_Type_Name__c</columns>
    <columns>Return_Number_Shipping__c</columns>
    <columns>ORDERS.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.SHIPPING_ZIP</field>
        <operation>equals</operation>
        <value>45701</value>
    </filters>
    <label>All Orders</label>
</ListView>